--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style type="text/css">
 		body {
 			font-family: helvetica, sans serif;
-			align-content:"center";
+			background-color: "MediumSeaGreen";
 		}
 		</style>
 
