--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <head>
 	
+	<!-- Title -->
 	<title>Aden Stokes</title>
-
+    
+    <!-- Styles -->
 	<style type="text/css">
 		body {
 			font-family: helvetica, sans serif;
 			background-color: "MediumSeaGreen";
 		}
+
+		div.box {
+			text-align: center;
+		}
 		</style>
 
 	</head>
 <body>
-	<img src="aden.jpg" alt="aden"/>
+	<div class="box">
+	<img src="aden.jpg" alt="aden" width="450" height="450" />
+</div>
 
 
 	<h1>Aden Stokes - My Profile</h1>
